--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
   },
   "dependencies": {
+    "@techstark/opencv-js": "^4.8.0-release.10",
+    "jimp": "^0.22.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
