--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@techstark/opencv-js": "^4.8.0-release.10",
     "jimp": "^0.22.10",
+    "onnxruntime-web": "^1.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
